--- a/MultiLingualApp/Sankati_MultiLingualApp/Sankati_MultiLingualApp/Base.lproj/Main.storyboard
+++ b/MultiLingualApp/Sankati_MultiLingualApp/Sankati_MultiLingualApp/Base.lproj/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,10 +22,20 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter text to translate here..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ax9-Jr-Pfg">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="132" id="u3L-fz-FuP"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="20" y="42" width="360" height="132"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="u3L-fz-FuP"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="u3L-fz-FuP"/>
+                                    </mask>
                                 </variation>
                             </textView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="puh-xS-htd">
@@ -33,34 +45,72 @@
                                     <segment title="French"/>
                                     <segment title="Hindi"/>
                                 </segments>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="71" y="230" width="242" height="29"/>
-                                </variation>
+                                <connections>
+                                    <action selector="languageChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="cHa-NX-6N7"/>
+                                </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BR4-KR-QrZ">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="83" id="3AK-H9-gS8"/>
+                                </constraints>
                                 <state key="normal" title="Translate"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="230" y="266" width="83" height="30"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="3AK-H9-gS8"/>
+                                    </mask>
                                 </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="3AK-H9-gS8"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="translation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uIL-8s-SNx"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="The translated text is....." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wvs-za-92w">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="20" y="336" width="360" height="215"/>
-                                </variation>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="puh-xS-htd" firstAttribute="top" secondItem="ax9-Jr-Pfg" secondAttribute="bottom" constant="56" id="9qg-fy-3Vi"/>
+                            <constraint firstItem="wvs-za-92w" firstAttribute="trailing" secondItem="ax9-Jr-Pfg" secondAttribute="trailing" id="JtX-Lw-yFV"/>
+                            <constraint firstItem="BR4-KR-QrZ" firstAttribute="top" secondItem="puh-xS-htd" secondAttribute="bottom" constant="8" symbolic="YES" id="KH3-gC-VW0"/>
+                            <constraint firstItem="puh-xS-htd" firstAttribute="trailing" secondItem="BR4-KR-QrZ" secondAttribute="trailing" id="RoB-BF-1SZ"/>
+                            <constraint firstItem="wvs-za-92w" firstAttribute="top" secondItem="BR4-KR-QrZ" secondAttribute="bottom" constant="40" id="VZj-lr-Ain"/>
+                            <constraint firstItem="ax9-Jr-Pfg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="22" id="Xz3-xM-UIM"/>
+                            <constraint firstItem="ax9-Jr-Pfg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Yz0-zB-87u"/>
+                            <constraint firstItem="ax9-Jr-Pfg" firstAttribute="leading" secondItem="wvs-za-92w" secondAttribute="leading" id="b2b-8Y-QgE"/>
+                            <constraint firstItem="wvs-za-92w" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="jBp-Qw-PEi"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wvs-za-92w" secondAttribute="bottom" constant="49" id="m3x-O1-n47"/>
+                            <constraint firstItem="puh-xS-htd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="uMc-a3-zTi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="puh-xS-htd" secondAttribute="trailing" constant="67" id="yuG-OW-gks"/>
+                        </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="ax9-Jr-Pfg"/>
                                 <exclude reference="puh-xS-htd"/>
                                 <exclude reference="BR4-KR-QrZ"/>
                                 <exclude reference="wvs-za-92w"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="m3x-O1-n47"/>
+                                <exclude reference="KH3-gC-VW0"/>
+                                <exclude reference="9qg-fy-3Vi"/>
+                                <exclude reference="RoB-BF-1SZ"/>
+                                <exclude reference="uMc-a3-zTi"/>
+                                <exclude reference="yuG-OW-gks"/>
+                                <exclude reference="Xz3-xM-UIM"/>
+                                <exclude reference="Yz0-zB-87u"/>
+                                <exclude reference="b2b-8Y-QgE"/>
+                                <exclude reference="JtX-Lw-yFV"/>
+                                <exclude reference="VZj-lr-Ain"/>
+                                <exclude reference="jBp-Qw-PEi"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -70,8 +120,27 @@
                                 <include reference="BR4-KR-QrZ"/>
                                 <include reference="wvs-za-92w"/>
                             </mask>
+                            <mask key="constraints">
+                                <include reference="m3x-O1-n47"/>
+                                <include reference="KH3-gC-VW0"/>
+                                <include reference="9qg-fy-3Vi"/>
+                                <include reference="RoB-BF-1SZ"/>
+                                <include reference="uMc-a3-zTi"/>
+                                <include reference="yuG-OW-gks"/>
+                                <include reference="Xz3-xM-UIM"/>
+                                <include reference="Yz0-zB-87u"/>
+                                <include reference="b2b-8Y-QgE"/>
+                                <include reference="JtX-Lw-yFV"/>
+                                <include reference="VZj-lr-Ain"/>
+                                <include reference="jBp-Qw-PEi"/>
+                            </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="languageSC" destination="puh-xS-htd" id="Wj2-Ln-T9i"/>
+                        <outlet property="toBeTranslatedTextTV" destination="ax9-Jr-Pfg" id="J0x-xq-pZX"/>
+                        <outlet property="translatedTextTV" destination="wvs-za-92w" id="4Zu-gG-8Hc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
